--- a/vignettes/SIMLR.Rnw
+++ b/vignettes/SIMLR.Rnw
@@ -190,7 +190,7 @@ plot(example_large_scale$ydata,
 
 \begin{figure*}[ht]
 \begin{center}
-\includegraphics[width=0.5\textwidth]{figure/image-2}
+\includegraphics[width=0.5\textwidth]{figure/image_large_scale-1}
 \end{center}
 \caption{Visualization of the 9 cell populations retrieved by SIMLR large scale on the dataset by Zeisel, Amit, et al.}
 \end{figure*}
