--- a/vignettes/SIMLR.Rnw
+++ b/vignettes/SIMLR.Rnw
@@ -144,19 +144,6 @@ plot(example$ydata,
 \caption{Visualization of the 3 cell populations retrieved by SIMLR on the dataset by Florian, et al.}
 \end{figure*}
 
-SIMRL supports SCESet objects. We now create an example object and then run SIMLR on it.
-
-<<sceset, message=FALSE, warning=FALSE>>=
-library(scran)
-ncells = 100
-ngenes = 50
-mu <- 2^runif(ngenes, 3, 10)
-gene.counts <- matrix(rnbinom(ngenes*ncells, mu=mu, size=2), nrow=ngenes)
-rownames(gene.counts) = paste0("X", seq_len(ngenes))
-sce = newSCESet(countData=data.frame(gene.counts))
-output = SIMLR(X = sce, c = 8, cores.ratio = 0)
-@
-
 We also run SIMLR feature ranking on the same inputs to get a rank of the key genes with the related pvalues. 
 
 <<SIMLR_Feature_Ranking_run, results='hide'>>=
@@ -203,7 +190,7 @@ plot(example_large_scale$ydata,
 
 \section{\Rcode{sessionInfo()}}
 
-<<sessioninfo, results='asis'>>=
+<<sessioninfo, results='asis', include=FALSE>>=
 toLatex(sessionInfo())
 @
 
