--- a/vignettes/SIMLR.Rnw
+++ b/vignettes/SIMLR.Rnw
@@ -19,15 +19,19 @@ BiocStyle::latex()
 
 \title{Using the \Biocpkg{SIMLR} package}
 
-\author{
-	Bo Wang\footnote{Department of Computer Science, Stanford University, Stanford, CA , USA.} \and
-	Daniele Ramazzotti\footnote{Department of Pathology, Stanford University, Stanford, CA , USA.} \and
-	Luca De Sano\footnote{Dipartimento di Informatica Sistemistica e Comunicazione, Università degli Studi Milano Bicocca 
-	Milano, Italy.} \and
-	Junjie Zhu\footnote{Department of Electrical Engineering, Stanford University, Stanford, CA , USA.} \and
-	Emma Pierson\footnote{Department of Computer Science, Stanford University, Stanford, CA , USA.} \and
-	Serafim Batzoglou\footnote{Department of Computer Science, Stanford University, Stanford, CA , USA.}
-}
+\author[1]{Bo Wang}
+\author[2]{Daniele Ramazzotti}
+\author[3]{Luca De Sano}
+\author[4]{Junjie Zhu}
+\author[1]{Emma Pierson}
+\author[1]{Serafim Batzoglou}
+
+\affil[1]{Department of Computer Science, Stanford University, Stanford, CA , USA}
+\affil[2]{Department of Pathology, Stanford University, Stanford, CA , USA}
+\affil[3]{Dipartimento di Informatica Sistemistica e Comunicazione, Università degli Studi Milano Bicocca, 
+    Milano, Italy}
+\affil[4]{Department of Electrical Engineering, Stanford University, Stanford, CA, USA}
+
 
 \date{\today}
 \maketitle
@@ -143,19 +147,6 @@ plot(example$ydata,
 \end{center}
 \caption{Visualization of the 3 cell populations retrieved by SIMLR on the dataset by Florian, et al.}
 \end{figure*}
-
-SIMRL supports SCESet objects. We now create an example object and then run SIMLR on it.
-
-<<sceset, message=FALSE, warning=FALSE>>=
-library(scran)
-ncells = 100
-ngenes = 50
-mu <- 2^runif(ngenes, 3, 10)
-gene.counts <- matrix(rnbinom(ngenes*ncells, mu=mu, size=2), nrow=ngenes)
-rownames(gene.counts) = paste0("X", seq_len(ngenes))
-sce = newSCESet(countData=data.frame(gene.counts))
-output = SIMLR(X = sce, c = 8, cores.ratio = 0)
-@
 
 We also run SIMLR feature ranking on the same inputs to get a rank of the key genes with the related pvalues. 
 
