--- a/vignettes/SIMLR.Rnw
+++ b/vignettes/SIMLR.Rnw
@@ -19,19 +19,15 @@ BiocStyle::latex()
 
 \title{Using the \Biocpkg{SIMLR} package}
 
-\author[1]{Bo Wang}
-\author[2]{Daniele Ramazzotti}
-\author[3]{Luca De Sano}
-\author[4]{Junjie Zhu}
-\author[1]{Emma Pierson}
-\author[1]{Serafim Batzoglou}
-
-\affil[1]{Department of Computer Science, Stanford University, Stanford, CA , USA}
-\affil[2]{Department of Pathology, Stanford University, Stanford, CA , USA}
-\affil[3]{Dipartimento di Informatica Sistemistica e Comunicazione, Università degli Studi Milano Bicocca, 
-    Milano, Italy}
-\affil[4]{Department of Electrical Engineering, Stanford University, Stanford, CA, USA}
-
+\author{
+    Bo Wang\footnote{Department of Computer Science, Stanford University, Stanford, CA , USA.} \and
+    Daniele Ramazzotti\footnote{Department of Pathology, Stanford University, Stanford, CA , USA.} \and
+    Luca De Sano\footnote{Dipartimento di Informatica Sistemistica e Comunicazione, Università degli Studi Milano Bicocca 
+    Milano, Italy.} \and
+    Junjie Zhu\footnote{Department of Electrical Engineering, Stanford University, Stanford, CA , USA.} \and
+    Emma Pierson\footnote{Department of Computer Science, Stanford University, Stanford, CA , USA.} \and
+    Serafim Batzoglou\footnote{Department of Computer Science, Stanford University, Stanford, CA , USA.}
+}
 
 \date{\today}
 \maketitle
