--- a/vignettes/vignette.Rnw
+++ b/vignettes/vignette.Rnw
@@ -26,7 +26,7 @@ BiocStyle::latex()
 \author[1]{Serafim Batzoglou}
 
 \affil[1]{Department of Computer Science, Stanford University, Stanford, CA , USA.}
-\affil[2]{Dipartimento di Informatica Sistemistica e Comunicazione, Università degli Studi Milano Bicocca Milano, Italy.}
+\affil[2]{Dipartimento di Informatica Sistemistica e Comunicazione, Università degli Studi di Milano-Bicocca, Milano, Italy.}
 
 \date{\today}
 \maketitle
@@ -63,7 +63,7 @@ background = "#f3f3ff"
 \item[1.0.0] implements SIMLR and SIMLR feature ranking algorithms. 
 \item[1.0.2] implements SIMLR large scale algorithms. 
 \item[1.5.1] implements CIMLR clustering method. 
-\item[1.7.3] removed the CIMLR clustering method; for it, please refer to https://github.com/danro9685/CIMLR. 
+\item[1.7.3] removes CIMLR clustering method; please refer to https://github.com/danro9685/CIMLR. 
 \end{itemize}
 
 \section{Algorithms and useful links} \label{sec:stuff}
@@ -140,7 +140,7 @@ head(ranks$pval)
 head(ranks$aggR)
 @
 
-Similarly, we show an example for SIMLR large scale on an input dataset being a reduced version of the dataset provided in Buettner, Zeisel, Amit, et al. "Cell types in the mouse cortex and hippocampus revealed by single-cell RNA-seq." Science 347.6226 (2015): 1138-1142. For this dataset we have a ground true of 9 cell populations, i.e., clusters. 
+Similarly, we show an example for SIMLR large scale on an input dataset being a reduced version of the dataset provided in Buettner, Zeisel, Amit, et al. "Cell types in the mouse cortex and hippocampus revealed by single-cell RNA-seq." Science 347.6226 (2015): 1138-1142. For this dataset we have a ground true of 9 cell populations, i.e., clusters. But we should notice that here we use for computational reasons a reduced version of the data, so please refer to the original publication for the full data. 
 
 <<SIMLR_Large_Scale_run, warning=FALSE>>=
 set.seed(11111)
