--- a/vignettes/vignette.Rnw
+++ b/vignettes/vignette.Rnw
@@ -9,7 +9,7 @@ BiocStyle::latex()
 
 %\VignetteIndexEntry{Single-cell Interpretation via Multi-kernel LeaRning (\Biocpkg{SIMLR})}
 
-\usepackage{hyperref}
+%\usepackage{hyperref}
 \usepackage{amsmath, amsthm, amssymb}
 \usepackage{expl3}
 
